--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ whitelist:
 title: "Software Carpentry"
 
 # The slogan describes your website and is used on homepage in <title> and other important places
-slogan: "Teaching Lab Skills for Scientific Computing"
+slogan: "Teaching Basic Lab Skills for Scientific Computing"
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
 description: "Software Carpentry is volunteer non-profit organization dedicated to teaching basic computing skills to researchers."
@@ -33,13 +33,14 @@ description: "Software Carpentry is volunteer non-profit organization dedicated 
 # See > authors.yml
 author: gvwilson
 
-# This URL is the main address for absolute links. Don't include a slash at the end.
-#
-url: 'http://dev.software-carpentry.org'
+# This URL identifies the domain.
+url: 'http://software-carpentry.org'
+
+# This URL is the root of the site below the domain.
 baseurl: ''
 
-# This URL is the base for referenced files.
-filesurl: 'http://dev.software-carpentry.org/files'
+# This URL is the root of files below the domain.
+filesurl: '/files'
 
 # Software Carpentry-specific configuration values.
 # FIXME: eliminate some of these (duplicate social media information)
@@ -63,14 +64,6 @@ flag_size       : 16
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
 # improve_content: https://github.com/Phlow/feeling-responsive/edit/gh-pages
-
-# This URL points directly to the images directory making
-# things easier to link to images in posts and templates. It needs a slash at the end.
-#
-# Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
-# Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
-#
-urlimg: 'http://dev.software-carpentry.org/files/'
 
 # Logo image (white with transparent background to stand out on blue background)
 logo: "logo-white.svg"
