--- a/_config.yml
+++ b/_config.yml
@@ -211,7 +211,7 @@ og_description:                     "Feeling Responsive is built on the fabulous
 #
 # used in _includes/comments
 
-disqus_shortname: swcarpentry
+disqus_shortname: software-carpentry
 
 #      _____
 #     / ___/____ ___________
