--- a/_config.yml
+++ b/_config.yml
@@ -135,6 +135,7 @@ exclude:
     - README.md
     - INSTALL.md
     - Makefile
+    - bin
 
 # The language setting is used in /includes/header.html for html-settings
 language: "en"
